--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Homework 11</title>
+    <title>Chris Chow XR Dev</title>
     <style>
         body {
             font-family:Arial, Helvetica, sans-serif;
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <h1 style= font-size:64px;color:#384572>Homework 11 By Chris Chow</h1>
+    <h1 style= font-size:48px;color:#384572>Christopher Chow's Site for XR Design and Development</h1>
 
 </body>
 
