--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <body>
     <h1 style= font-size:48px;color:#384572>Christopher Chow's Site for XR Design and Development</h1>
+    <h2><a href="https://cchow10250.wordpress.com/" target="_blank">Blog Site</a></h2>
 
 </body>
 
