--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <h1 style= font-size:48px;color:#384572>Christopher Chow's Site for XR Design and Development</h1>
     <h2><a href="https://cchow10250.wordpress.com/" target="_blank">Blog Site</a></h2>
     <h2><a href="sites/test.html" target="_blank">1. Building a Basic Scene</a></h2>
+    <h2><a href="https://fmundergrad.hunter.cuny.edu/~chowc/medp299/hw/index.html" target="_blank">2. Aframe Environment</a></h2>
+    
 
 </body>
 
