--- a/sites/aframe.html
+++ b/sites/aframe.html
@@ -24,7 +24,7 @@
                 <a-asset-item id="covid" src="../img/covid/covid.gltf"></a-asset-item> <!-- Covid-19 by gelmi.com.br -->
                 <a-asset-item id="mask" src="../img/mask/mask.gltf"></a-asset-item> <!-- Discarded Covid-19 Mask by Marc Sawyer -->
                 <a-asset-item id="chopper" src="../img/chopper/scene.gltf"></a-asset-item> <!-- TONY TONY CHOPPER -ONE PIECE- by MACA3D -->
-                <video id="covidVideo" preload="auto" playsinline webkit-playsinline autoplay muted loop="true" src="img/covid.mp4"></video>
+                <video id="covidVideo" preload="auto" playsinline webkit-playsinline autoplay muted loop="true" src="../img/covid.mp4"></video>
 
                 <a-mixin id="cube" geometry="primitive: box; width: 0.33; height: 0.33; depth: 0.33"
                     hoverable grabbable stretchable draggable droppable
