spark ar project added

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <h2><a href="https://cchow10250.wordpress.com/" target="_blank">Blog Site</a></h2>
     <h2><a href="sites/test.html" target="_blank">1. Building a Basic Scene</a></h2>
     <h2><a href="sites/aframe.html" target="_blank">2. Aframe Environment</a></h2>
+    <h2><a href="sites/sparkar.html">3. Spark AR Project</a></h2>
     
 
 </body>
