--- a/index.html
+++ b/index.html
@@ -22,8 +22,15 @@
     <h2><a href="sites/test.html" target="_blank">1. Building a Basic Scene</a></h2>
     <h2><a href="sites/aframe.html" target="_blank">2. Aframe Environment</a></h2>
     <h2><a href="sites/sparkar.html">3. Spark AR Project</a></h2>
-    <h2><a href="https://docs.google.com/document/d/17hOY1nss8MpLhYPvmpcc9bt65CvQA755RULBwgSy_Lc/edit?usp=sharing" target="_blank">4. Unity Lab 1</a></h2>
-    <h2><a href="content/arProject.unitypackage" download>5. Unity AR Project</a></h2>
+    <h2><a href="content/arProject.unitypackage" download>4. Unity AR Project</a></h2>
+
+    <h1 style= font-size:40px;color:#384572>Exercises</h1>
+    <h2><a href="content/Unit1_tutorial.unitypackage" download>1. Create With Code: Unit 1 (March 2nd & March 9th)</a></h2>
+    <h2><a href="https://docs.google.com/document/d/17hOY1nss8MpLhYPvmpcc9bt65CvQA755RULBwgSy_Lc/edit?usp=sharing" target="_blank">2. Create With Code: Unit 1 Lab (March 9th)</a></h2>
+    <h2><a href="content/Unit2_tutorial.unitypackage" download>3. Create With Code: Unit 2 (March 16th & March 23rd)</a></h2>
+    <h2><a href="content/Unit2_Challenge.unitypackage" download>4. Create With Code: Unit 2 Challenge (March 23rd)</a></h2>
+    <h2><a href="content/Unit2_Lab.unitypackage" download>5. Create With Code: Unit 2 Lab (March 23rd)</a></h2>
+    <h2><a href="content/Unit3_tutorial1.unitypackage" download>6. Create With Code: Unit 3 (March 30th)</a></h2>
     
 
 </body>
