--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <h2><a href="content/Unit2_tutorial.unitypackage" download>3. Create With Code: Unit 2 (March 16th & March 23rd)</a></h2>
     <h2><a href="content/Unit2_Challenge.unitypackage" download>4. Create With Code: Unit 2 Challenge (March 23rd)</a></h2>
     <h2><a href="content/Unit2_Lab.unitypackage" download>5. Create With Code: Unit 2 Lab (March 23rd)</a></h2>
-    <h2><a href="content/Unit3_tutorial1.unitypackage" download>6. Create With Code: Unit 3 (March 30th)</a></h2>
+    <h2><a href="content/Unit3_tutorial1.unitypackage" download>6. Create With Code: Unit 3 (March 30th & April 6th)</a></h2>
+    <h2><a href="content/Unit3_challenge.unitypackage" download>7. Create With Code: Unit 3 Challenge (April 6th)</a></h2>
+    <h2><a href="content/Unit3_lab.unitypackage" download>8. Create With Code: Unit 3 Lab (April 6th)</a></h2>
     
 
 </body>
