--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <h2><a href="sites/aframe.html" target="_blank">2. Aframe Environment</a></h2>
     <h2><a href="sites/sparkar.html">3. Spark AR Project</a></h2>
     <h2><a href="content/arProject.unitypackage" download>4. Unity AR Project</a></h2>
+    <h2><a href="sites/unityenv.html">5. Unity Environment</a></h2>
 
     <h1 style= font-size:40px;color:#384572>Exercises</h1>
     <h2><a href="content/Unit1_tutorial.unitypackage" download>1. Create With Code: Unit 1 (March 2nd & March 9th)</a></h2>
@@ -33,6 +34,9 @@
     <h2><a href="content/Unit3_tutorial1.unitypackage" download>6. Create With Code: Unit 3 (March 30th & April 6th)</a></h2>
     <h2><a href="content/Unit3_challenge.unitypackage" download>7. Create With Code: Unit 3 Challenge (April 6th)</a></h2>
     <h2><a href="content/Unit3_lab.unitypackage" download>8. Create With Code: Unit 3 Lab (April 6th)</a></h2>
+    <h2><a href="content/Unit4_tutorial.unitypackage" download>9. Create With Code: Unit 4 (April 13th & April 27th)</a></h2>
+    <h2><a href="content/Unit4_challenge.unitypackage" download>10. Create With Code: Unit 4 Challenge (April 27th)</a></h2>
+    <h2><a href="content/Unit2_Lab.unitypackage" download>11. Create With Code: Unit 4 Lab (April 27th)</a></h2>
     
 
 </body>
