--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <h2><a href="sites/sparkar.html">3. Spark AR Project</a></h2>
     <h2><a href="content/arProject.unitypackage" download>4. Unity AR Project</a></h2>
     <h2><a href="sites/unityenv.html">5. Unity Environment</a></h2>
+    <h2><a href="sites/finalproj.html">6. Interactive Environment Description</a></h2>
 
     <h1 style= font-size:40px;color:#384572>Exercises</h1>
     <h2><a href="content/Unit1_tutorial.unitypackage" download>1. Create With Code: Unit 1 (March 2nd & March 9th)</a></h2>
