--- a/sites/finalproj.html
+++ b/sites/finalproj.html
@@ -19,6 +19,7 @@
 <body>
     <h1 style= font-size:48px;color:#384572>Interactive Environment Description</h1>
     <embed src="../content/finaldesc.pdf" width="1000px" height="1000px" />
+    <a href="../content/finaldesc.pdf" download><br>OR DOWNLOAD HERE</a>
     <h2><a href="../index.html">Back to Home</a></h2>
     
 
