--- a/index.html
+++ b/index.html
@@ -1,49 +1,171 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+
+  <head>
     <meta charset="utf-8">
-    <title>Chris Chow XR Dev</title>
-    <style>
-        body {
-            font-family:Arial, Helvetica, sans-serif;
-            background-color: #ecfbff;
-            text-align: center;
-            text-decoration: none;
-        }
-        a {
-            text-decoration: none;
-        }
-    </style>
-</head>
+    <link rel="icon" href="images/logo.svg">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> <!-- Bootstrap CSS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> <!-- AOS css -->
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/526acf3862.js" crossorigin="anonymous"></script> <!-- Icons -->
+    <title>Christopher Chow</title>
+  </head>
 
-<body>
-    <h1 style= font-size:48px;color:#384572>Christopher Chow's Site for XR Design and Development</h1>
-    <h2><a href="https://cchow10250.wordpress.com/" target="_blank">Blog Site</a></h2>
-    <h2><a href="sites/test.html" target="_blank">1. Building a Basic Scene</a></h2>
-    <h2><a href="sites/aframe.html" target="_blank">2. Aframe Environment</a></h2>
-    <h2><a href="sites/sparkar.html">3. Spark AR Project</a></h2>
-    <h2><a href="content/arProject.unitypackage" download>4. Unity AR Project</a></h2>
-    <h2><a href="sites/unityenv.html">5. Unity Environment</a></h2>
-    <h2><a href="sites/finalproj.html">6. Interactive Environment Description</a></h2>
-    <h2><a href="https://drive.google.com/file/d/16xFDcfqTZJTAdfpWwyIAAArU_ywpUPIT/view?usp=sharing" target="_blank">7-1. The Barren Land - UNITY PACKAGE (6gb)</a></h2>
-    <h2><a href="https://drive.google.com/file/d/1z117ZK4r6QrAzn3JJCbsDCsOYHKpALMQ/view?usp=sharing" target="_blank">7-2. The Barren Land - Windows Build (VR - 2gb)</a></h2>
-    <h2><a href="https://drive.google.com/file/d/1jW_3IIMQWMmrJWB0heHy-78L_iQUgTZn/view?usp=sharing" target="_blank">7-3. The Barren Land - Windows Build (NO VR - 2gb)</a></h2>
-    <h2><a href="https://drive.google.com/file/d/1jW_3IIMQWMmrJWB0heHy-78L_iQUgTZn/view?usp=sharing" target="_blank">7-4. The Barren Land - Video (Coming Soon)</a></h2>
+  <body>
 
-    <h1 style= font-size:40px;color:#384572>Exercises</h1>
-    <h2><a href="content/Unit1_tutorial.unitypackage" download>1. Create With Code: Unit 1 (March 2nd & March 9th)</a></h2>
-    <h2><a href="https://docs.google.com/document/d/17hOY1nss8MpLhYPvmpcc9bt65CvQA755RULBwgSy_Lc/edit?usp=sharing" target="_blank">2. Create With Code: Unit 1 Lab (March 9th)</a></h2>
-    <h2><a href="content/Unit2_tutorial.unitypackage" download>3. Create With Code: Unit 2 (March 16th & March 23rd)</a></h2>
-    <h2><a href="content/Unit2_Challenge.unitypackage" download>4. Create With Code: Unit 2 Challenge (March 23rd)</a></h2>
-    <h2><a href="content/Unit2_Lab.unitypackage" download>5. Create With Code: Unit 2 Lab (March 23rd)</a></h2>
-    <h2><a href="content/Unit3_tutorial1.unitypackage" download>6. Create With Code: Unit 3 (March 30th & April 6th)</a></h2>
-    <h2><a href="content/Unit3_challenge.unitypackage" download>7. Create With Code: Unit 3 Challenge (April 6th)</a></h2>
-    <h2><a href="content/Unit3_lab.unitypackage" download>8. Create With Code: Unit 3 Lab (April 6th)</a></h2>
-    <h2><a href="content/Unit4_tutorial.unitypackage" download>9. Create With Code: Unit 4 (April 13th & April 27th)</a></h2>
-    <h2><a href="content/Unit4_challenge.unitypackage" download>10. Create With Code: Unit 4 Challenge (April 27th)</a></h2>
-    <h2><a href="content/Unit2_Lab.unitypackage" download>11. Create With Code: Unit 4 Lab (April 27th)</a></h2>
     
+    <!------------------------ Landing Page ------------------------>
+    <section class="landing container-fluid gradient" id="landing">
+      <div class="intro">
+          <div class="intro_content slideUp">
+              <h1>Hi :)</h1>
+              <h2>I'm Christopher Chow</h2>
+              <div class="view_button">
+                <a href="#about">
+                    Enter
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-double-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M3.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L9.293 8 3.646 2.354a.5.5 0 0 1 0-.708z"/>
+                        <path fill-rule="evenodd" d="M7.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L13.293 8 7.646 2.354a.5.5 0 0 1 0-.708z"/>
+                    </svg>
+                </a>
 
-</body>
+            </div>
+          </div>
+      </div>
+      
+      <img data-aos="fade-left" data-aos-duration="1200" src='images/me.png' alt="Landing Portrait">
+
+    </section>
+
+    <!------------------------ Navigation Bar ------------------------>
+    <nav class="navbar navbar-expand-md navbar-light bg-light" id="menu">
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      <div class="collapse navbar-collapse" id="navbar">
+          <ul class="navbar-nav">
+              <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#landing">Home</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="html/gallery.html">Gallery</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="html/projects.html">Projects</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="html/contact.html">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="files/christopher-chow-resume.pdf" target="_blank">Resume</a>
+              </li>
+          </ul>
+      </div>
+
+      <div class="rightnav">
+          <a href="#landing"><img src="images/logo.svg" alt="" width="55" height="42"> Chow</a>
+      </div>
+
+    </nav>
+
+    <!------------------------ About ------------------------>
+    <section class="about container-fluid" id="about">
+      <div class="space"></div>
+      <div class="about_head">
+        <h1 data-aos="fade-left">About Me</h1>
+        <div class="underline" data-aos="fade-right"></div>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class="col-4">
+          <img data-aos="fade-right" src='images/aboutme.jpg' alt="Me">
+        </div>
+        <div class="about_content col-6">
+          <h1 data-aos="fade-up">Me.</h1>
+          <h2 data-aos="fade-up">Graphic Designer</h2>
+          <h2 data-aos="fade-up">Web Designer & Developer</h2>
+          <p data-aos="fade-up">
+            Hi, my name is Christopher Chow and I’m a senior at 
+            Hunter College majoring in Digital Media Studies and minoring in 
+            Computer Science. I’m passionate about visual design, web design, and 
+            front-end web development and am interested in all things in digital design 
+            and UI/UX design, especially in video game industry. This website features works and projects  
+            I have created using various programs, such as Adobe Creative Suite and Blender.
+            Feel free to contact me if you would like to work together!
+          </p>
+          <a class="resume" data-aos="fade-right" href="files/christopher-chow-resume.pdf" target="_blank">
+            My resume
+          </a>
+        </div>
+      </div>
+
+    </section>
+
+    <!------------------------ Portfolio Hub ------------------------>
+    <section class="portfolio container-fluid gradient">
+      <div class="space"></div>
+      <div class="portfolio_head">
+        <h1 data-aos="fade-left">Portfolio</h1>
+        <div class="underline" data-aos="fade-right"></div>
+      </div>
+
+      <div class="portfolio_content">
+        <div class="row justify-content-around">
+
+          <div class="col-4">
+            <a href="html/gallery.html">
+              <div class="container" data-aos="fade-right">
+                <img src="images/gallery.jpg" alt="Gallery">
+                <div class="text-block-right">
+                  <h1>Gallery</h1>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div class="col-4">
+            <a href="html/projects.html">
+              <div class="container" data-aos="fade-left">
+                <img src="images/projects.jpg" alt="Projects">
+                <div class="text-block-left">
+                  <h1>Projects</h1>
+                </div>
+              </div>
+            </a>
+          </div>
+
+        </div>
+      </div>
+
+    </section>
+
+    <!------------------------ Footer ------------------------>
+    <section class="footer">
+      <div class="footer_social">
+        <a href="https://www.linkedin.com/in/christopher-chow-design/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.instagram.com/fruitcakeache/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://twitter.com/FruitsFR" target="_blank"><i class="fab fa-twitter"></i></a>
+      </div>
+      <div class="footer_email">
+        <a href="mailto:chrischow10250@gmail.com">chrischow10250@gmail.com</a> 
+      </div>
+
+    </section>
+
+
+    <script src="js/main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script> <!-- Jquery -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script> <!-- Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> <!-- Bootstrap JS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> <!-- AOS js -->
+    <script>
+      AOS.init({
+        once: true,
+      });
+    </script>
+  </body>
 
 </html>
