--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <h2>I'm Christopher Chow</h2>
               <div class="view_button">
                 <a href="#about">
-                    Enter
+                    View my work
                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-double-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" d="M3.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L9.293 8 3.646 2.354a.5.5 0 0 1 0-.708z"/>
                         <path fill-rule="evenodd" d="M7.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L13.293 8 7.646 2.354a.5.5 0 0 1 0-.708z"/>
@@ -33,8 +33,6 @@
             </div>
           </div>
       </div>
-      
-      <img data-aos="fade-left" data-aos-duration="1200" src='images/me.png' alt="Landing Portrait">
 
     </section>
 
@@ -84,15 +82,14 @@
           <img data-aos="fade-right" src='images/aboutme.jpg' alt="Me">
         </div>
         <div class="about_content col-6">
-          <h1 data-aos="fade-up">Me.</h1>
+          <h1 data-aos="fade-up">Hi!</h1>
           <h2 data-aos="fade-up">Graphic Designer</h2>
-          <h2 data-aos="fade-up">Web Designer & Developer</h2>
+          <h2 data-aos="fade-up">Aspiring Game Designer</h2>
           <p data-aos="fade-up">
             Hi, my name is Christopher Chow and I’m a senior at 
             Hunter College majoring in Digital Media Studies and minoring in 
-            Computer Science. I’m passionate about visual design, web design, and 
-            front-end web development and am interested in all things in digital design 
-            and UI/UX design, especially in video game industry. This website features works and projects  
+            Computer Science. I’m passionate about visual design and game development. I'm interested in all things in digital design 
+            and UI/UX design, especially in the video game industry. This website features works and projects  
             I have created using various programs, such as Adobe Creative Suite and Blender.
             Feel free to contact me if you would like to work together!
           </p>
