--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
           <p data-aos="fade-up">
             Hi, my name is Christopher Chow and I’m a senior at 
             Hunter College majoring in Digital Media Studies and minoring in 
-            Computer Science. I’m passionate about visual design and game development. I'm interested in all things in digital design 
-            and UI/UX design, especially in the video game industry. This website features works and projects  
+            Computer Science. I’m passionate about visual design, video games, and sports. I'm interested in all things in digital design 
+            and UI/UX design, especially in the video game and sports industry. This website features works and projects  
             I have created using various programs, such as Adobe Creative Suite and Blender.
             Feel free to contact me if you would like to work together!
           </p>
@@ -115,7 +115,7 @@
           <div class="col-4">
             <a href="html/gallery.html">
               <div class="container" data-aos="fade-right">
-                <img src="images/gallery.jpg" alt="Gallery">
+                <img src="images/gallery.png" alt="Gallery">
                 <div class="text-block-right">
                   <h1>Gallery</h1>
                 </div>
@@ -144,7 +144,7 @@
       <div class="footer_social">
         <a href="https://www.linkedin.com/in/christopher-chow-design/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         <a href="https://www.instagram.com/fruitcakeache/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://twitter.com/FruitsFR" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://twitter.com/Frewtcayk" target="_blank"><i class="fab fa-twitter"></i></a>
       </div>
       <div class="footer_email">
         <a href="mailto:chrischow10250@gmail.com">chrischow10250@gmail.com</a> 
