--- a/html/projects.html
+++ b/html/projects.html
@@ -114,7 +114,7 @@
                   </div>
               </div>
               <p>AniPC is a company for vinyl skins and cases for computers. I am part of the design team and I have created the logo and skins for the company. I have also designed custom skins sent in by clients. </p>
-              <a href="https://anipc.net/" target="_blank" class="website-link">Visit Website</a>
+              <a href="https://www.tiktok.com/@anipcskins" target="_blank" class="website-link">Visit TikTok</a>
             </div>
           </div>
         </div>
@@ -177,7 +177,7 @@
                   </div>
               </div>
               <p>The Keyboard Hub is a website developed and designed in a web production class midterm. It is an informational site regarding the world and market of custom mechanical keyboards, showcasing the hardware of a custom keyboard as well as the custom keyboard community. </p>
-              <a href="http://www.google.com/" target="_blank" class="website-link">Visit Website</a>
+              <a href="https://fmundergrad.hunter.cuny.edu/~chowc/medp285/christopherChow_midterm/index.html" target="_blank" class="website-link">Visit Website</a>
             </div>
           </div>
         </div>
