--- a/index.html
+++ b/index.html
@@ -1,72 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-    <meta charset="utf-8">
-    <link rel="icon" href="images/logo.svg">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> <!-- Bootstrap CSS -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> <!-- AOS css -->
-    <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/526acf3862.js" crossorigin="anonymous"></script> <!-- Icons -->
+    <meta charset="utf-8" />
+    <link rel="icon" href="images/logo.svg" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <!-- Bootstrap CSS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <!-- AOS css -->
+    <link rel="stylesheet" href="css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/526acf3862.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Icons -->
     <title>Christopher Chow</title>
   </head>
 
   <body>
-
-    
     <!------------------------ Landing Page ------------------------>
     <section class="landing container-fluid gradient" id="landing">
       <div class="intro">
-          <div class="intro_content slideUp">
-              <h1>Hi :)</h1>
-              <h2>I'm Christopher Chow</h2>
-              <div class="view_button">
-                <a href="#about">
-                    View my work
-                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-double-right" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" d="M3.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L9.293 8 3.646 2.354a.5.5 0 0 1 0-.708z"/>
-                        <path fill-rule="evenodd" d="M7.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L13.293 8 7.646 2.354a.5.5 0 0 1 0-.708z"/>
-                    </svg>
-                </a>
-
-            </div>
+        <div class="intro_content slideUp">
+          <h1>Hi :)</h1>
+          <h2>I'm Christopher Chow</h2>
+          <div class="view_button">
+            <a href="#about">
+              View my work
+              <svg
+                width="1em"
+                height="1em"
+                viewBox="0 0 16 16"
+                class="bi bi-chevron-double-right"
+                fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M3.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L9.293 8 3.646 2.354a.5.5 0 0 1 0-.708z"
+                />
+                <path
+                  fill-rule="evenodd"
+                  d="M7.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L13.293 8 7.646 2.354a.5.5 0 0 1 0-.708z"
+                />
+              </svg>
+            </a>
           </div>
+        </div>
       </div>
-
     </section>
 
     <!------------------------ Navigation Bar ------------------------>
     <nav class="navbar navbar-expand-md navbar-light bg-light" id="menu">
-
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbar"
+        aria-controls="navbar"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
       </button>
-  
+
       <div class="collapse navbar-collapse" id="navbar">
-          <ul class="navbar-nav">
-              <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#landing">Home</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="html/gallery.html">Gallery</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="html/projects.html">Projects</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="html/contact.html">Contact</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="files/christopher-chow-resume.pdf" target="_blank">Resume</a>
-              </li>
-          </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#landing"
+              >Home</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="html/gallery.html">Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="html/projects.html">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="html/contact.html">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              href="files/christopher-chow-resume.pdf"
+              target="_blank"
+              >Resume</a
+            >
+          </li>
+        </ul>
       </div>
 
       <div class="rightnav">
-          <a href="#landing"><img src="images/logo.svg" alt="" width="55" height="42"> Chow</a>
+        <a href="#landing"
+          ><img src="images/logo.svg" alt="" width="55" height="42" /> Chow</a
+        >
       </div>
-
     </nav>
 
     <!------------------------ About ------------------------>
@@ -79,26 +116,30 @@
 
       <div class="row justify-content-center">
         <div class="col-4">
-          <img data-aos="fade-right" src='images/aboutme.jpg' alt="Me">
+          <img data-aos="fade-right" src="images/aboutme.jpg" alt="Me" />
         </div>
         <div class="about_content col-6">
           <h1 data-aos="fade-up">Hi!</h1>
           <h2 data-aos="fade-up">Graphic Designer</h2>
-          <h2 data-aos="fade-up">Aspiring Game Designer</h2>
           <p data-aos="fade-up">
-            Hi, my name is Christopher Chow and I’m a senior at 
-            Hunter College majoring in Digital Media Studies and minoring in 
-            Computer Science. I’m passionate about visual design, video games, and sports. I'm interested in all things in digital design 
-            and UI/UX design, especially in the video game and sports industry. This website features works and projects  
-            I have created using various programs, such as Adobe Creative Suite and Blender.
-            Feel free to contact me if you would like to work together!
+            My name is Christopher Chow and I’m a recent college graduate
+            who works in graphic design!
+            I’m passionate about visual design, video games, and sports. I'm
+            interested in all things digital design and UI/UX design. This website
+            features works and projects I have created using various programs,
+            such as Adobe Creative Suite and Blender. Feel free to contact me if
+            you would like to work together!
           </p>
-          <a class="resume" data-aos="fade-right" href="files/christopher-chow-resume.pdf" target="_blank">
+          <a
+            class="resume"
+            data-aos="fade-right"
+            href="files/christopher-chow-resume.pdf"
+            target="_blank"
+          >
             My resume
           </a>
         </div>
       </div>
-
     </section>
 
     <!------------------------ Portfolio Hub ------------------------>
@@ -111,11 +152,10 @@
 
       <div class="portfolio_content">
         <div class="row justify-content-around">
-
           <div class="col-4">
             <a href="html/gallery.html">
               <div class="container" data-aos="fade-right">
-                <img src="images/gallery.png" alt="Gallery">
+                <img src="images/gallery.png" alt="Gallery" />
                 <div class="text-block-right">
                   <h1>Gallery</h1>
                 </div>
@@ -126,43 +166,58 @@
           <div class="col-4">
             <a href="html/projects.html">
               <div class="container" data-aos="fade-left">
-                <img src="images/projects.jpg" alt="Projects">
+                <img src="images/projects.jpg" alt="Projects" />
                 <div class="text-block-left">
                   <h1>Projects</h1>
                 </div>
               </div>
             </a>
           </div>
-
         </div>
       </div>
-
     </section>
 
     <!------------------------ Footer ------------------------>
     <section class="footer">
       <div class="footer_social">
-        <a href="https://www.linkedin.com/in/christopher-chow-design/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-        <a href="https://www.instagram.com/fruitcakeache/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://twitter.com/Frewtcayk" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a
+          href="https://www.linkedin.com/in/christopher-chow-design/"
+          target="_blank"
+          ><i class="fab fa-linkedin-in"></i
+        ></a>
+        <a href="https://www.instagram.com/fruitcakeache/" target="_blank"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a href="https://twitter.com/Frewtcayk" target="_blank"
+          ><i class="fab fa-twitter"></i
+        ></a>
       </div>
       <div class="footer_email">
-        <a href="mailto:chrischow10250@gmail.com">chrischow10250@gmail.com</a> 
+        <a href="mailto:chrischow10250@gmail.com">chrischow10250@gmail.com</a>
       </div>
-
     </section>
 
-
     <script src="js/main.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.js"></script> <!-- Jquery -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script> <!-- Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> <!-- Bootstrap JS -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> <!-- AOS js -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <!-- Jquery -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Bootstrap JS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- AOS js -->
     <script>
       AOS.init({
         once: true,
       });
     </script>
   </body>
-
 </html>
