Updated landing banner, removed contact page

--- a/index.html
+++ b/index.html
@@ -86,9 +86,6 @@
             <a class="nav-link" href="html/projects.html">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="html/contact.html">Contact</a>
-          </li>
-          <li class="nav-item">
             <a
               class="nav-link"
               href="files/christopher-chow-resume.pdf"
@@ -127,7 +124,7 @@
             I’m passionate about visual design, video games, and sports. I'm
             interested in all things digital design and UI/UX design. This website
             features works and projects I have created using various programs,
-            such as Adobe Creative Suite and Blender. Feel free to contact me if
+            such as Adobe Creative Suite and Blender. Feel free to <a href="mailto:chrischow10250@gmail.com">contact me</a> if
             you would like to work together!
           </p>
           <a
