--- a/html/projects.html
+++ b/html/projects.html
@@ -237,7 +237,7 @@
                 </div>
               </div>
               <p>GMK Pitaya is a keycap design project following a dragon fruit theme. It is currently still in the design phase. Color scheme, novelty illustrations, deskmats, and renders were designed by me. GMK Pitaya also involves the collaboration with many vendors and artists. </p>
-              <a href="https://www.instagram.com/fruitcakeache/" class="website-link">Instagram Link</a>
+              <a href="https://www.instagram.com/frewtcayk/" class="website-link">Instagram Link</a>
             </div>
           </div>
         </div>
@@ -250,7 +250,7 @@
     <section class="footer">
       <div class="footer_social">
         <a href="https://www.linkedin.com/in/christopher-chow-design/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-        <a href="https://www.instagram.com/fruitcakeache/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/frewtcayk/" target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="https://twitter.com/FruitsFR" target="_blank"><i class="fab fa-twitter"></i></a>
       </div>
       <div class="footer_email">
