--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           target="_blank"
           ><i class="fab fa-linkedin-in"></i
         ></a>
-        <a href="https://www.instagram.com/fruitcakeache/" target="_blank"
+        <a href="https://www.instagram.com/frewtcayk/" target="_blank"
           ><i class="fab fa-instagram"></i
         ></a>
         <a href="https://twitter.com/Frewtcayk" target="_blank"
