--- a/html/gallery.html
+++ b/html/gallery.html
@@ -54,43 +54,43 @@
       </div>
 
       <div id="caption1" style="display:none">
-        <h3>Kiss</h3><p>An interpretation of a kiss, with the sun 'kissing' the ocean at sunset. Made in Illustrator.</p>
+        <h3>AniPC Logo</h3><p>Logo for e-commerce website AniPC, a company that creates and prints vinyl stickers for computers. Made in Illustrator.</p>
       </div>
       <div id="caption2" style="display:none">
-        <h3>Loser Gets Anything</h3><p>An album cover focusing on typography and hierarchy. Made in Photoshop.</p>
+        <h3>AniPC Logo 2.0</h3><p>2nd Version of AniPC Logo. Made in Illustrator.</p>
       </div>
       <div id="caption3" style="display:none">
         <h3>Staten Island Greenmarket Logo</h3><p>Logo for a digital design class final. Made in Illustrator.</p>
       </div>
       <div id="caption4" style="display:none">
-        <h3>iArt Poster</h3><p>Poster of iArt exihibition created in class. Inspired by Animal Crossing: New Horizons. Made in Illustrator.</p>
-      </div>
-      <div id="caption5" style="display:none">
-        <h3>AniPC Logo</h3><p>Logo for e-commerce website AniPC, a company that creates and prints vinyl stickers for computers. Made in Illustrator.</p>
-      </div>
-      <div id="caption6" style="display:none">
-        <h3>AniPC Logo 2.0</h3><p>2nd Version of AniPC Logo. Made in Illustrator.</p>
-      </div>
-      <div id="caption7" style="display:none">
         <h3>My Logo</h3><p>My logo for my website/myself. CC's potential is limitless. Made in Illustrator.</p>
       </div>
+      <div id="caption5" style="display:none">
+        <h3>Lakers Gameday Poster</h3><p>Lakers vs Warriors poster featuring LeBron James. Made in Photoshop and Illustrator.</p>
+      </div>
+      <div id="caption6" style="display:none">
+        <h3>Kevin Durant Suns Poster</h3><p>Wallpaper of Kevin Durant. Made in Photoshop and Illustrator.</p>
+      </div>
+      <div id="caption7" style="display:none">
+        <h3>iArt Poster</h3><p>Poster of iArt exihibition created in class. Inspired by Animal Crossing: New Horizons. Made in Illustrator.</p>
+      </div>
       <div id="caption8" style="display:none">
-        <h3>GMK Pitaya Novelty</h3><p>Keycap novelty illustration for GMK Pitaya keycap set showcase. Novelty made in Illustrator, render made in Blender.</p>
+        <h3>Laundromat Advertisement</h3><p>Social Media Advertisement Poster for a laundromat. Made in illustrator.</p>
       </div>
       <div id="caption9" style="display:none">
-        <h3>GMK Pitaya Render #2</h3><p>Showcase of GMK Pitaya keycap set. Made in Blender.</p>
+        <h3>Red Sun Banner</h3><p>Red Sunset behind a mountain. Made in Illustrator.</p>
       </div>
       <div id="caption10" style="display:none">
-        <h3>Sanji Head Icon</h3><p>Head icon of Sanji from One Piece. Inspired by Super Smash Bros Ultimate head icons. Made in Illustrator.</p>
+        <h3>Kingdom Hearts Banner</h3><p>Kingdom Hearts profile banner made for a friend. Made in Photoshop.</p>
       </div>
       <div id="caption11" style="display:none">
-        <h3>GMK Pitaya Base Kit</h3><p>Base Kit of GMK Pitaya keycap set. Inspired by Dragon fruit colors. Made in Blender.</p>
+        <h3>Loser Gets Anything</h3><p>An album cover focusing on typography and hierarchy. Made in Photoshop.</p>
       </div>
       <div id="caption12" style="display:none">
-        <h3>GMK Pitaya Render</h3><p>Render of GMK Pitaya keycaps on a keyboard. Made in Blender.</p>
+        <h3>GMK Pitaya Render</h3><p>Keycap novelty illustration for GMK Pitaya keycap set showcase. Novelty made in Illustrator, render made in Blender.</p>
       </div>
       <div id="caption13" style="display:none">
-        <h3>Luffy Head Icon</h3><p>Head icon of Luffy from One Piece. Inspired by Super Smash Bros Ultimate head icons. Made in Illustrator.</p>
+        <h3>One Piece Straw Hat Head Icons</h3><p>Head icons of the Straw Hats from One Piece. Inspired by Super Smash Bros Ultimate head icons. Made in Illustrator.</p>
       </div>
       <div id="caption14" style="display:none">
         <h3>Zoro Head Icon</h3><p>Head icon of Zoro from One Piece. Inspired by Super Smash Bros Ultimate head icons. Made in Illustrator.</p>
@@ -102,14 +102,68 @@
         <h3>Usopp Head Icon</h3><p>Head icon of Usopp from One Piece. Inspired by Super Smash Bros Ultimate head icons. Made in Illustrator.</p>
       </div>
 
+      <!--Logos-->
+      <div class="gallery_header">
+        <h1 data-aos="fade-down">Logos</h1>
+      </div>
       <div id="animated-thumbnails-gallery" class="gallery_content">
+        <a href="../images/gallery/anipc.png" data-lg-size="1200-1200" data-sub-html="#caption1">
+          <img data-aos="fade-up" alt="'AniPC Logo'" src="../images/gallery/anipc_thumb.png" />
+        </a>
+        <a href="../images/gallery/anipc2.png" data-lg-size="1200-1200" data-sub-html="#caption2">
+          <img data-aos="fade-up" alt="'AniPC Logo 2.0'" src="../images/gallery/anipc2_thumb.png" />  
+        </a>
+        <a href="../images/gallery/greenmarket.jpg" data-lg-size="1200-1200" data-sub-html="#caption3">
+          <img data-aos="fade-up" alt="'Staten Island Greenmarket Logo'" src="../images/gallery/greenmarket_thumb.jpg" />
+        </a>
+        <a href="../images/gallery/mylogo.jpg" data-lg-size="1200-1200" data-sub-html="#caption4">
+          <img data-aos="fade-up" alt="'My Logo'" src="../images/gallery/mylogo_thumb.jpg" />
+        </a>
+      <!--Posters-->
+      <div class="gallery_header">
+        <h1 data-aos="fade-down">Posters</h1>
+      </div>
+          <a href="../images/gallery/lebronposter.jpg" data-lg-size="1200-1350" data-sub-html="#caption5">
+          <img data-aos="fade-up" alt="'LeBron Poster'" src="../images/gallery/lebronposter_thumb.jpg" />
+        </a>
+        <a href="../images/gallery/welcomekd.jpg" data-lg-size="750-1200" data-sub-html="#caption6">
+          <img data-aos="fade-up" alt="'Kevin Durant Poster'" src="../images/gallery/welcomekd_thumb.jpg" />
+        </a>
+        <a href="../images/gallery/iart.jpg" data-lg-size="900-1200" data-sub-html="#caption7">
+          <img data-aos="fade-up" alt="'IArt Poster'" src="../images/gallery/iart_thumb.jpg" />
+        </a>
+        <a href="../images/gallery/laundry.jpg" data-lg-size="1200-1200" data-sub-html="#caption8">
+          <img data-aos="fade-up" alt="'Laundry'" src="../images/gallery/laundry_thumb.jpg" />
+        </a>
+        <!--Banners-->
+      <div class="gallery_header">
+        <h1 data-aos="fade-down">Banners</h1>
+      </div>
+      <a href="../images/gallery/redsunbanner.jpg" data-lg-size="2000-500" data-sub-html="#caption9">
+        <img data-aos="fade-up" alt="'Red Sun Banner'" src="../images/gallery/redsunbanner_thumb.jpg" />
+      </a>
+      <a href="../images/gallery/SoraBanner.jpg" data-lg-size="1500-500" data-sub-html="#caption10">
+        <img data-aos="fade-up" alt="'Sora Banner'" src="../images/gallery/SoraBanner_thumb.jpg" />
+      </a>
+      <!--Misc-->
+      <div class="gallery_header">
+        <h1 data-aos="fade-down">Miscellaneous</h1>
+      </div>
+      <a href="../images/gallery/album.jpg" data-lg-size="342-342" data-sub-html="#caption11">
+        <img data-aos="fade-up" alt="'Album Cover'" src="../images/gallery/album_thumb.jpg" />
+      </a>
+      <a href="../images/gallery/pitaya.jpg" data-lg-size="1440-810" data-sub-html="#caption12">
+        <img data-aos="fade-up" alt="'GMK Pitaya'" src="../images/gallery/pitaya_thumb.jpg" />
+      </a>
+      <a href="../images/gallery/strawhaticons.jpg" data-lg-size="1200-1200" data-sub-html="#caption13">
+        <img data-aos="fade-up" alt="'Straw Hat Icons'" src="../images/gallery/strawhaticons_thumb.jpg" />
+      </a>
 
-        <a href="../images/gallery/album.jpg" data-lg-size="342-342" data-sub-html="#caption2">
-          <img data-aos="fade-up" alt="'Loser Gets Everything'" src="../images/gallery/album_thumb.jpg" />
-        </a>
-        <a href="../images/gallery/kiss.jpg" data-lg-size="612-792" data-sub-html="#caption1">
-          <img data-aos="fade-up" alt="'Kiss'" src="../images/gallery/kiss_thumb.jpg" />
-        </a>
+
+      </div>
+
+
+        <!--
         <a href="../images/gallery/iart.png" data-lg-size="1296-1728" data-sub-html="#caption4">
           <img data-aos="fade-up" alt="'iArt Poster'" src="../images/gallery/iart_thumb.png" />
         </a>
@@ -151,10 +205,9 @@
         </a>
         <a href="../images/gallery/pitaya2.jpg" data-lg-size="1440-810" data-sub-html="#caption9">
           <img data-aos="fade-up" alt="'GMK Pitaya Render 2'" src="../images/gallery/pitaya2_thumb.jpg" />
-        </a>
+        </a>-->
         
 
-      </div>
 
     </section>
 
@@ -162,7 +215,7 @@
     <section class="footer">
       <div class="footer_social">
         <a href="https://www.linkedin.com/in/christopher-chow-design/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-        <a href="https://www.instagram.com/fruitcakeache/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/frewtcayk/" target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="https://twitter.com/FruitsFR" target="_blank"><i class="fab fa-twitter"></i></a>
       </div>
       <div class="footer_email">
@@ -190,7 +243,7 @@
           speed: 500
       });
       lightGallery(document.getElementById('animated-thumbnails-gallery'), {
-          thumbnail: true,
+          thumbnail: true
       });
   </script>
   </body>
