--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
       <div class="row justify-content-center">
         <div class="col-4">
-          <img data-aos="fade-right" src="images/aboutme.jpg" alt="Me" />
+          <img data-aos="fade-right" src="images/meabout.jpg" alt="Me" />
         </div>
         <div class="about_content col-6">
           <h1 data-aos="fade-up">Hi!</h1>
