--- a/html/gallery.html
+++ b/html/gallery.html
@@ -81,7 +81,7 @@
         <h3>Red Sun Banner</h3><p>Red Sunset behind a mountain. Made in Illustrator.</p>
       </div>
       <div id="caption10" style="display:none">
-        <h3>Kingdom Hearts Banner</h3><p>Kingdom Hearts profile banner made for a friend. Made in Photoshop.</p>
+        <h3>Monster Hunter World Banner</h3><p>Banner featuring Monster Hunter World. Made in Photoshop.</p>
       </div>
       <div id="caption11" style="display:none">
         <h3>Loser Gets Anything</h3><p>An album cover focusing on typography and hierarchy. Made in Photoshop.</p>
@@ -93,7 +93,7 @@
         <h3>One Piece Straw Hat Head Icons</h3><p>Head icons of the Straw Hats from One Piece. Inspired by Super Smash Bros Ultimate head icons. Made in Illustrator.</p>
       </div>
       <div id="caption14" style="display:none">
-        <h3>Zoro Head Icon</h3><p>Head icon of Zoro from One Piece. Inspired by Super Smash Bros Ultimate head icons. Made in Illustrator.</p>
+        <h3>Mountain Banner</h3><p>Username banner featuring a mountain background and a blue gradient. Made in Photoshop.</p>
       </div>
       <div id="caption15" style="display:none">
         <h3>Nami Head Icon</h3><p>Head icon of Nami from One Piece. Inspired by Super Smash Bros Ultimate head icons. Made in Illustrator.</p>
@@ -142,8 +142,11 @@
       <a href="../images/gallery/redsunbanner.jpg" data-lg-size="2000-500" data-sub-html="#caption9">
         <img data-aos="fade-up" alt="'Red Sun Banner'" src="../images/gallery/redsunbanner_thumb.jpg" />
       </a>
-      <a href="../images/gallery/SoraBanner.jpg" data-lg-size="1500-500" data-sub-html="#caption10">
-        <img data-aos="fade-up" alt="'Sora Banner'" src="../images/gallery/SoraBanner_thumb.jpg" />
+      <a href="../images/gallery/mountainbanner.jpg" data-lg-size="3000-1000" data-sub-html="#caption14">
+        <img data-aos="fade-up" alt="'Mountain Banner'" src="../images/gallery/mountainbanner_thumb.jpg" />
+      </a>
+      <a href="../images/gallery/mhwbanner.jpg" data-lg-size="1440-600" data-sub-html="#caption10">
+        <img data-aos="fade-up" alt="'MHW Banner'" src="../images/gallery/mhwbanner_thumb.jpg" />
       </a>
       <!--Misc-->
       <div class="gallery_header">
