--- a/html/gallery.html
+++ b/html/gallery.html
@@ -54,10 +54,10 @@
       </div>
 
       <div id="caption1" style="display:none">
-        <h3>AniPC Logo</h3><p>Logo for e-commerce website AniPC, a company that creates and prints vinyl stickers for computers. Made in Illustrator.</p>
+        <h3>Wally's Ice Cream Logo</h3><p>Logo for an ice-cream shop. Made in Illustrator.</p>
       </div>
       <div id="caption2" style="display:none">
-        <h3>AniPC Logo 2.0</h3><p>2nd Version of AniPC Logo. Made in Illustrator.</p>
+        <h3>AniPC Logo 2.0</h3><p>Logo for e-commerce website AniPC, a company that creates and prints vinyl stickers for computers. Made in Illustrator.</p>
       </div>
       <div id="caption3" style="display:none">
         <h3>Staten Island Greenmarket Logo</h3><p>Logo for a digital design class final. Made in Illustrator.</p>
@@ -107,8 +107,8 @@
         <h1 data-aos="fade-down">Logos</h1>
       </div>
       <div id="animated-thumbnails-gallery" class="gallery_content">
-        <a href="../images/gallery/anipc.png" data-lg-size="1200-1200" data-sub-html="#caption1">
-          <img data-aos="fade-up" alt="'AniPC Logo'" src="../images/gallery/anipc_thumb.png" />
+        <a href="../images/gallery/wallyicecream.png" data-lg-size="1200-1200" data-sub-html="#caption1">
+          <img data-aos="fade-up" alt="'Wally's Ice-cream Logo'" src="../images/gallery/wallyicecream_thumb.png" />
         </a>
         <a href="../images/gallery/anipc2.png" data-lg-size="1200-1200" data-sub-html="#caption2">
           <img data-aos="fade-up" alt="'AniPC Logo 2.0'" src="../images/gallery/anipc2_thumb.png" />  
